--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -331,6 +331,9 @@ header {
             font-weight: normal;
             padding-left: 6px;
         }
+        .admin {
+            font-size: 12px;
+        }
     }
     .post {
         font-size: 12px;
@@ -501,13 +504,13 @@ header {
             margin-right: 10px;
             text-align: center;
             color: #999;
-            width: 52px;
+            width: 40px;
             overflow: hidden;
             i {
                 display: block;
                 margin-bottom: 8px;
                 text-align: center;
-                font-size: 26px;
+                font-size: 22px;
                 line-height: 1;
                 padding: 0;
                 color: #ddd;
@@ -661,7 +664,7 @@ header {
 /* Footer */
 footer {
     .copyright {
-        padding: 0px 0 20px;
+        padding: 20px 0;
         margin-top: 5px;
         color: #999;
         font-size: 12px;
