--- a/views/signin.jade
+++ b/views/signin.jade
@@ -15,10 +15,10 @@
                 i.icon-angle-right
                 a(href="/member/#{user._id}")
                     | 我的 #{site.name}
-            li
-                i.icon-angle-right
-                a(href="/thread/new")
-                    | 发表新话题
+            //- li
+            //-     i.icon-angle-right
+            //-     a(href="/thread/new")
+            //-         | 发表新话题
             //- li
             //-     i.icon-angle-right
             //-     a(href="#")
