--- a/views/thread/index.jade
+++ b/views/thread/index.jade
@@ -21,12 +21,12 @@ block content
         .board-meta
             span.views
                 i.icon-eye-open
-                | #{thread.views}
-            span.num
-                i.icon-comment
-                | 128 跟帖
-            span.add-com-btn
-                i.icon-share-alt
-                | 128 分享
+                | #{thread.views} 阅读
+            //- span.num
+            //-     i.icon-comment
+            //-     | 128 跟帖
+            //- span.add-com-btn
+            //-     i.icon-share-alt
+            //-     | 128 分享
         .comment-board
             include ../comment.jade
