--- a/views/recent.jade
+++ b/views/recent.jade
@@ -1,12 +1,17 @@
 #recent.mime-block
     h3.title 最近发布的主题
         .pub-list.clearfix
-            - each thread in uu.threads
-                .single-pub
-                    h4.title.clearfix
-                        a(href="/thread/#{thread.id}") 
-                            i.icon-chevron-right
-                            |#{thread.name}
-                            span.author
-                                i.icon-time
-                                != moment(thread.pubdate).fromNow()
+            - if (uu.threads.length > 0)
+                - each thread in uu.threads
+                    .single-pub
+                        h4.title.clearfix
+                            a(href="/thread/#{thread.id}") 
+                                i.icon-chevron-right
+                                |#{thread.name}
+                                span.author
+                                    i.icon-time
+                                    != moment(thread.pubdate).fromNow()
+            - else 
+                h4.no
+                    i.icon-ban-circle
+                    | #{uu.nickname ? uu.nickname: uu.duoshuo.user_id} 还没有发布任何话题
