--- a/views/layout.jade
+++ b/views/layout.jade
@@ -53,7 +53,7 @@ html(ng-app="candy")
     //- angular app
     script(src="/javascripts/candy.js")
     script(src="/javascripts/store.js")
-    //- duoshuo configs
+    //- duoshuo comments configs
     script.
         var duoshuoQuery = {
             short_name: "#{site.duoshuo.short_name}",
