--- a/views/sidebar.jade
+++ b/views/sidebar.jade
@@ -1,3 +1,5 @@
 include signin
 include widgets/search
-include widgets/hotboard
+include widgets/ds-top-threads
+include widgets/ds-recent-comments
+include widgets/ds-recent-visitors
