--- a/views/thread/index.jade
+++ b/views/thread/index.jade
@@ -32,3 +32,8 @@ block content
                 | 加载中...
         .comment-board
             include ../comment.jade
+
+block sidebar
+    include ../signin
+    include ../widgets/search
+    include ../widgets/ds-top-threads
