--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -17,7 +17,7 @@
   font-family: 'Indie Flower';
   font-style: normal;
   font-weight: 400;
-  src: local('Indie Flower'), local('IndieFlower'), url(http://themes.googleusercontent.com/static/fonts/indieflower/v4/10JVD_humAd5zP2yrFqw6qRDOzjiPcYnFooOUGCOsRk.woff) format('woff');
+  src: local('Indie Flower'), local('IndieFlower'), url(../font/logo.woff) format('woff');
 }
 
 i {
@@ -1307,10 +1307,10 @@ h3.syncing {
 
 // widgets
 .ds-recent-visitors {
-    padding: 5px 10px;
+    padding: 5px 8px;
     img {
         .thumbnail();
-        margin-right: 0px;
+        margin: 0px 0px 10px 0px !important;
     }
 }
 
