--- a/views/404.jade
+++ b/views/404.jade
@@ -4,3 +4,7 @@ block content
      .not-found.clearfix
         h3 404 
             span 没有发现你想找的东西
+
+block sidebar 
+    include signin
+    include widgets/search
