--- a/views/500.jade
+++ b/views/500.jade
@@ -4,3 +4,7 @@ block content
      .not-found.clearfix
         h3 500 
             span 啊哦，服务器或者数据库出问题了，麻烦联络管理员解决。
+
+block sidebar 
+    include signin
+    include widgets/search
