--- a/views/board/index.jade
+++ b/views/board/index.jade
@@ -40,6 +40,7 @@ block content
                             a(href="/thread/#{thread.id}#comments")
                                 i.icon-comment
                                 span.num.ds-thread-count(data-thread-key="#{thread.id}",data-count-type="comments") 加载中...
+            include ../pager
         - else 
             h4.no
                 i.icon-ban-circle
