--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1322,8 +1322,11 @@ h3.syncing {
 .not-found span {
   font-size: 14px;
 }
+#ds-waiting {
+  background-position: center 0 !important;
+}
 .ds-recent-visitors {
-  padding: 5px 8px;
+  padding: 5px 5px;
 }
 .ds-recent-visitors img {
   border: 1px solid #ddd;
@@ -1362,4 +1365,7 @@ h3.syncing {
 }
 .ds-recent-comments li:hover {
   background-color: #fff !important;
+}
+.pagination i {
+  padding: 0;
 }
