--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -1,13 +1,9 @@
-//    __            __     
-//   / /____  _____/ /___ _
-//  / __/ _ \/ ___/ / __ `/
-// / /_/  __(__  ) / /_/ / 
-// \__/\___/____/_/\__,_/  
-// 
-//
-// requires
-// @import url('./base.css');
-// @import url('./960.css');
+//                         __     
+//   _________ _____  ____/ /_  __
+//  / ___/ __ `/ __ \/ __  / / / /
+// / /__/ /_/ / / / / /_/ / /_/ / 
+// \___/\__,_/_/ /_/\__,_/\__, /  
+//                       /____/   
 
 @import url('./bootstrap.min.css');
 @import url('./font-awesome.min.css');
@@ -1306,8 +1302,12 @@ h3.syncing {
 }
 
 // widgets
+#ds-waiting {
+    background-position: center 0 !important;
+}
+
 .ds-recent-visitors {
-    padding: 5px 8px;
+    padding: 5px 5px;
     img {
         .thumbnail();
         margin: 0px 0px 10px 0px !important;
@@ -1326,5 +1326,11 @@ h3.syncing {
         &:hover {
             background-color: #fff !important;
         };
+    }
+}
+
+.pagination {
+    i {
+        padding: 0;
     }
 }
