删除ifile依赖，提供中文文档
由于ifile依赖的node版本较高，且出现了几次无法编译的错误，故暂时停用

--- a/views/widgets/search.jade
+++ b/views/widgets/search.jade
@@ -1,7 +1,6 @@
 .search(ng-controller="candy.ctrlers.search")
     form#topSearch
       .input-group
-        input(type="text",ng-model="search.keyword").form-control
         .input-group-btn
-            a.btn.btn-primary(href="#",ng-click="search()")
-                i.icon-search
+            i.icon-search
+        input(type="text",ng-model="search.keyword",ng-change="fetch()").form-control
