--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -999,16 +999,18 @@ footer {
 .search {
     margin-bottom: 15px;
     margin-top: 15px;
+    background-color: @key-color;
+    overflow: hidden; 
+    .br();
+    i {
+        padding: 0px 6px;
+        color: #fff;
+    }
     input {
         height: 24px;
         background-color: #f5f5f5;
         box-shadow: inset 0px 0px 5px #ddd;
         padding: 4px;
-    }
-    a {
-        height: 24px;
-        line-height: 1;
-        font-size: 12px;
     }
 }
 
@@ -1101,13 +1103,18 @@ form.form-horizontal {
             padding: 0;
             padding-bottom: 10px;
             border-bottom: 1px solid #ddd;
+            margin-bottom: 10px;
             .avatar {
-                width: 32px;
-                height: 32px;
+                width: 35px;
+                height: 35px;
                 .thumbnail();
             }
             span {
-                padding-top: 6px;
+                display: block;
+                padding-top: 8px;
+                float:left;
+                font-size: 12px;
+                color: #999;
             }
         }
     }
