--- a/views/admin/index.jade
+++ b/views/admin/index.jade
@@ -40,17 +40,17 @@ block content
                         i.icon-group.col-lg-2.label.label-info
                         .desc.col-lg-10 
                             h3.uptime 总用户数量 #{users.length} 人
-                            .info 今日新增用户 1 人。管理员 1 人，版主 1 人
+                            //- .info 今日新增用户 1 人。管理员 1 人，版主 1 人
                     .dash-item.col-lg-12
                         i.icon-code-fork.col-lg-2.label.label-warning
                         .desc.col-lg-10 
                             h3.uptime 总讨论节点数量 #{boards.length} 个
-                            .info 今日新增讨论节点 3 个
+                            //- .info 今日新增讨论节点 3 个
                     .dash-item.col-lg-12
                         i.icon-comments-alt.col-lg-2.label.label-danger
                         .desc.col-lg-10 
                             h3.uptime 总话题量 35 帖
-                            .info 今日新增话题 35 帖
+                            //- .info 今日新增话题 35 帖
             #board.tab-pane(ng-controller="candy.ctrlers.admin.board")
                 #board-dash.accordion
                     .accordion-group
@@ -116,9 +116,9 @@ block content
                                     - else
                                         |#{user.nickname ? user.nickname : user.duoshuo.user_id}
                                 span.type
-                                    |#{user.type}
+                                    | （#{user.type}）
                                 span.threads
-                                    |#{user.threads.length}
+                                    |（发表话题数量：#{user.threads.length}）
             #setting.tab-pane(ng-controller="candy.ctrlers.admin.setting")
                 form(name="updateSetting").form-horizontal
                     .form-group
