--- a/views/widgets/search.jade
+++ b/views/widgets/search.jade
@@ -1,4 +1,4 @@
-.search(ng-controller="candy.ctrlers.search")
+//- .search(ng-controller="candy.ctrlers.search")
     form#topSearch
       .input-group
         .input-group-btn
