--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,8 +1,14 @@
 doctype 5
 html(ng-app="candy")
   head
+    meta(charset="utf-8")
     meta(name="viewport",content="width=device-width, initial-scale=1.0")
-    title #{site.name}
+    block meta
+        meta(name="keywords",content="#{site.name}")
+        meta(name="description",content="#{site.desc}")
+    title 
+        block title
+            |#{site.name}
     link(rel='shortcut icon',type="image/x-icon",href="/images/favicon.ico")
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
