--- a/views/500.jade
+++ b/views/500.jade
@@ -3,7 +3,12 @@ extends layout
 block content
      .not-found.clearfix
         h3 500 
-            span 啊哦，服务器或者数据库出问题了，麻烦联络管理员解决。
+            - if (msg)
+                span.msg #{msg}
+            - else 
+                span 啊哦，服务器或者数据库出问题了，麻烦联络管理员解决。
+            - if (error)
+                span.error-detail #{error.toString()}
 
 block sidebar 
     include signin
