--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -399,8 +399,20 @@ header {
             pre {
                 margin: 10px 0 14px;
             }
+            table {
+                border: 1px solid #ddd;
+                box-shadow: 0px 0px 1px #ddd;
+                th {
+                    background-color: #f5f5f5;
+                    padding: 3px 8px;
+                }
+                td {
+                    padding: 5px 8px;
+                    border-bottom: 1px dashed #ddd;
+                }
+            }
         }
-        .title {
+        h4.title {
             font-size: 18px;
             font-weight: normal;
             margin-bottom: 8px;
