--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -1374,3 +1374,9 @@ h3.syncing {
         padding: 0;
     }
 }
+
+.error-detail {
+    font-size: 12px;
+    padding-left: 76px;
+    color: #999;
+}
