--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,6 +3,7 @@ html(ng-app="candy")
   head
     meta(charset="utf-8")
     meta(name="viewport",content="width=device-width, initial-scale=1.0")
+    meta(name="generator",content="#{sys.name}",version="#{sys.version}")
     block meta
         meta(name="keywords",content="#{site.name}")
         meta(name="description",content="#{site.desc}")
