--- a/views/500.jade
+++ b/views/500.jade
@@ -7,8 +7,8 @@ block content
                 span.msg #{msg}
             - else 
                 span 啊哦，服务器或者数据库出问题了，麻烦联络管理员解决。
-            - if (error)
-                span.error-detail #{error.toString()}
+        - if (error)
+            p.error-detail #{error.toString()}
 
 block sidebar 
     include signin
