修正管理员权限

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1346,6 +1346,7 @@ img.avatar-mid {
   font-size: 12px;
   padding-left: 10px;
   color: #999;
+  float: right;
 }
 .thread .remove:hover {
   color: red;
