--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -1312,6 +1312,7 @@ img.avatar-mid {
         font-size: 12px;
         padding-left: 10px;
         color: #999;
+        float: right;
         &:hover {
             color: red;
         };
