--- a/views/thread/new.jade
+++ b/views/thread/new.jade
@@ -15,30 +15,48 @@ block banner
                       - else
                         | 呃。。。管理员还没有创建任何讨论节点
 
-block content
-  - if (board)
-    #thread(ng-controller="candy.ctrlers.thread.new").thread
-        #new.fn-clear
-            form(name="createThread").form-horizontal
-              .form-group
-                label.col-lg-1.control-label 标题
-                .col-lg-11
-                    input(type="text",ng-model="thread.name").form-control
-              .form-group
-                label.col-lg-1.control-label 内容
-                .col-lg-11.editor
-                    textarea.form-control
-              input(type="hidden",ng-model="thread.board",ng-init="thread.board='#{board._id}'")
-              input(type="hidden",ng-model="thread.lz",ng-init="thread.lz='#{user._id}'")
-              .form-group
-                .col-lg-offset-1.col-lg-11
-                  a(href="javascript:void(0);",ng-click="create()").btn.btn-success
-                    i.icon-ok 
-                    | 写好了
+block main
+  #thread(ng-controller="candy.ctrlers.thread.new").thread
+    .col-lg-9
+        - if (board)
+           #new.fn-clear
+              form(name="createThread").form-horizontal
+                .form-group
+                  label.col-lg-1.control-label 标题
+                  .col-lg-11
+                      input(type="text",ng-model="thread.name").form-control
+                .form-group
+                  label.col-lg-1.control-label 内容
+                  .col-lg-11.editor
+                      textarea.form-control
+                .form-group.attachement
+                  .col-lg-offset-1.col-lg-11
+                    .uploader
+                      .btn.btn-default.fileinput-button
+                        i.icon-plus.icon-white
+                        span 上传附件
+                        input#fileupload(type="file",name="media")
+                      //- #progress.progress
+                      //-   .progress-bar.progress-bar-success
+                      #files.files.clearfix
+                input(type="hidden",ng-model="thread.board",ng-init="thread.board='#{board._id}'")
+                input(type="hidden",ng-model="thread.lz",ng-init="thread.lz='#{user._id}'")
+    .col-lg-3
+        .thread-submit.clearfix.side-cnt
+            a(href="javascript:void(0);",ng-click="create()").btn.btn-success.submit
+              i.icon-ok 
+              | 写好了
+        include ../signin
 
 block js
   - if (board)
     //- editor
     link(href="/stylesheets/editor/editor.css",rel="stylesheet")
     script(src="/javascripts/lib/editor.js")
+    //- uploader
+    link(href="/stylesheets/jquery.fileupload-ui.css",rel="stylesheet")
+    script(src="/javascripts/upload/jquery.ui.widget.js")
+    script(src="/javascripts/upload/jquery.iframe-transport.js")
+    script(src="/javascripts/upload/jquery.fileupload.js")
+    //- thread ctrler
     script(src="/javascripts/thread.js")
