--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -136,7 +136,7 @@ a {
 }
 
 /* Header */
-header {
+#header {
     background-color: @key-color;    
     box-shadow: 0px 0px 5px #999;
     #ihd {
@@ -690,7 +690,7 @@ header {
 }
 
 /* Footer */
-footer {
+#footer {
     .copyright {
         padding: 20px 0;
         margin-top: 5px;
@@ -1308,15 +1308,6 @@ img.avatar-mid {
         }
         
     }
-    .remove {
-        font-size: 12px;
-        padding-left: 10px;
-        color: #999;
-        float: right;
-        &:hover {
-            color: red;
-        };
-    }
 }
 
 i.icon-spinner {
@@ -1380,4 +1371,43 @@ h3.syncing {
     font-size: 12px;
     padding-left: 76px;
     color: #999;
+}
+
+.uploader {
+    background-color: #f5f5f5;
+    margin-top: -20px;
+    padding: 1px;
+    border: 1px solid #ddd;
+    margin-bottom: 20px;
+    .br(5px);
+    .btn {
+        font-size: 12px;
+    }
+}
+
+.thread-submit {
+    padding: 0px;
+    margin-bottom: 20px;
+    a.btn {
+        text-align: left;
+        .br(0px);
+        font-size: 14px;
+        padding: 5px 15px;
+        display: block;
+        text-shadow: none;
+    }
+    a.submit {
+        color: #fff;
+    }
+    a.remove {
+        color: #999;
+        font-size: 12px;
+        i {
+            padding-right: 12px;
+            font-size: 14px;
+        }
+        &:hover {
+            color: red;
+        };
+    }
 }
