--- a/views/pager.jade
+++ b/views/pager.jade
@@ -1,14 +1,18 @@
-- if (threads.length == 10)
-    #pager.pagination.clearfix
-        li
-            - if (page.current != 1)
-                a(href="/board/#{board.name}/page/#{page.current - 1}")
+- if (page.current <= page.max)
+    ul#pager.pagination.clearfix
+        - if (page.current != 1)
+            li.previous
+                a(href="/board/#{board.name}/page/#{page.current - 1}",title="上一页")
                     i.icon-chevron-left
-            - else
-                i.icon-chevron-left
-        li
-            - if (page.current != page.max)
-                a(href="/board/#{board.name}/page/#{page.current + 1}")
+        - else
+            li.previous.disabled
+                a(href="#")
+                    i.icon-chevron-left        
+        - if (page.current != page.max)
+            li.next
+                a(href="/board/#{board.name}/page/#{page.current + 1}",title="下一页")
                     i.icon-chevron-right
-            - else
-                i.icon-chevron-right
+        - else
+            li.next.disabled
+                a(href="#")
+                    i.icon-chevron-right
